--- a/github-sky-generator.ipynb
+++ b/github-sky-generator.ipynb
@@ -67,9 +67,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'data_level' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_3320/285421395.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     51\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mstars\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     52\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 53\u001b[1;33m \u001b[0mstars\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mstar_generator\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata_level\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'data_level' is not defined"
+     ]
+    }
+   ],
    "source": [
     "def star_generator(data):\n",
     "    \"\"\"\n",
@@ -111,6 +123,14 @@
     "\n",
     "    # stars is actually a tensor\n",
     "    # so now we have to generate a list that will reorder the stars in the tensor so that it become a matrix and it can be graphed.\n",
+    "    \n",
+    "    \n",
+    "    # We do this by using the function np.ravel()\n",
+    "    stars_matrix = []\n",
+    "    for week in range(weeks):\n",
+    "        for day in range(days):\n",
+    "            stars_matrix.append(np.ravel(stars[week * days + day]))\n",
+    "            \n",
     "\n",
     "    return stars\n",
     "\n",
