New star_generator function, diferent approach

--- a/github-sky-generator.ipynb
+++ b/github-sky-generator.ipynb
@@ -67,6 +67,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def star_generator2(data):\n",
+    "    \"\"\"\n",
+    "    Function that given a list of data, returns a list of stars\n",
+    "    \"\"\"\n",
+    "    stars = []\n",
+    "    for i in range(len(data)):\n",
+    "        if data[i] == \"0\":\n",
+    "            stars.append(None)\n",
+    "            continue\n",
+    "        stars.append(\"*\" * int(data[i]))\n",
+    "    return stars\n",
+    "\n",
+    "# star_generator2(data_count)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
@@ -75,11 +96,8 @@
     "    \"\"\"\n",
     "    Function that given a list of contributions generate a graph of it\n",
     "    \"\"\"\n",
-    "\n",
     "    # Generate the principal matrix which will be graphed\n",
-    "    stars = (\n",
-    "        []\n",
-    "    )  # List in witch each element represents a day, and inside each day a list with 0 and 1, 0 if there is no star, 1 if there is a star\n",
+    "    stars = [] # List in witch each element represents a day, and inside each day a list with 0 and 1, 0 if there is no star, 1 if there is a star\n",
     "    weeks = 52\n",
     "    weeks = 10\n",
     "    days = 7\n",
